typescript/checker/tests/conformance/es6/spread/iteratorSpreadInCall7.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            52,
        ),
        hi: BytePos(
            53,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/spread/iteratorSpreadInCall7.ts:2:37
  |
2 | function foo<T>(...s: T[]) { return s[0]; }
  |                                     ^

